接口自动化

--- a/APITest/pytest.ini
+++ b/APITest/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
-addopts= -vs
+addopts= -vs（-m smoke执行冒烟用例）
+testpaths=./testcases
+python_files =test*.py
+python_classes=Test*
+python_functions=test_*
+markers =
+    somke：冒烟测试
